--- a/style.css
+++ b/style.css
@@ -254,3 +254,61 @@ footer .content-footer .end{
     color: var(--primaryColor);
     margin-top: 1rem;
 }
+
+
+
+
+
+/*------------------------------------- Media Query-----------------------------------------------------*/
+@media screen and (max-width:575px){
+    :root{
+        --padding:1rem;
+    }
+    html{
+        font-size: 13px;
+    }
+   
+    .container-images{
+        display: none;
+    }
+    nav ul{
+        display: none;
+    }
+    .container-text{
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+    }
+    
+    .about img{
+        display: none;
+    }
+    .skills{
+        display: flex;
+        /* align-items: center; */
+        justify-content: center;
+        width: 100%;
+    }
+    .skills h1{
+        text-align: left;
+    }
+    .content-skills{
+       /* align-items: center; */
+       display: flex;
+       flex-wrap: wrap;
+       flex-direction: row;
+       width: 100%;
+      
+    }
+    .skill{
+      
+        height: 40px;
+        width: 40px; 
+    }
+    
+    .container-images{
+        display: none;
+    }
+}
